test-data/error/no-yaw.hltas
version 1
frames
s03-------|------|------|0.001|-|-|1
